--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,14 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="css/register.css">
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color:black;">
 
     
     <%- include('header'); -%>
+
+    <div class="bg-pic">
     <div class="container register mb-5">
         <div class="row">
 
@@ -59,7 +61,7 @@
 
 
                             <div>
-                                <button type="submit" class="btnRegister" id="btn">Login</button>
+                                <button type="submit" class="btnRegister reg-button" id="btn">Login</button>
                                 <a href="forgotPassword" class="down">forgot Password</a>
                             </div>
                         </div>
@@ -68,19 +70,21 @@
                 </form>
 
             </div>
-            <div class="col-md-4 register ">
-                <img src="images/signup1.jpg" class="icon rotate linear infinite" alt="image" />
-
-
-                <div id="container1">
-                    <span id="text1"></span>
-                    <span id="text2"></span>
+            <div class="col-md-4 register container-2">
+                <img src="images/signup1.jpg" class="icon-2" alt="image" />
+                <div class="centered">
+                    <div>Welcome Back!</div>
+                <div>Login to</div>
+                <div>Continue</div>
                 </div>
+                
 
             </div>
         </div>
 
     </div>
+
+</div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
